# CPushPush

./: .gitattributes  .gitignore  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in
examples/: Makefile.am  Makefile.in  pushgp_int.cpp  test.config  test.inputs
examples/inputs/: Ackermann.inputs  factorial.inputs  fib.inputs  muxor11.inputs  power.inputs  symreg.inputs  test.inputs
extension/: PointExtension.h  pushC.cpp  pushC.h
src/: BoolOps.h  BooleanInstructions.cpp  Code.cpp  Code.h  CodeInstructions.cpp  CodeOps.cpp  CodeOps.h  CodeUtils.cpp  CodeUtils.h  CompiledCode.cpp  CustomInstruction.h  Env.cpp  Env.h  EnvInstructions.cpp  ExecInstructions.cpp  FloatInstructions.cpp  GeneticOps.h  Instruction.h  Instructions.cpp  IntegerInstructions.cpp  Literal.h  Makefile.am  Makefile.in  NameInstructions.cpp  NumOps.h  RNG.h  RandOps.h  StaticInit.cpp  StaticInit.h  StaticLibMacros.h  Type.cpp  Type.h  TypeDef.h  TypedAtom.h  Word.cpp  Word.h  runpush.cpp
test/: Ackermann2.push  Makefile.am  Makefile.in  fib.push  parse_hook.cpp  run_tests.sh  test_name.cpp  testpush.cpp
